add task : store, validation, documentation
